--- a/проба.html
+++ b/проба.html
@@ -4,3 +4,11 @@
 новое новое новое
 
 yyра
+
+
+      <Item MenuEntryName="Edit" MenuItemName="Cut"/>
+        <Item MenuEntryName="Edit" MenuItemName="Copy"/>
+        <Item MenuEntryName="Edit" MenuItemName="Paste"/>
+        <Item MenuEntryName="Edit" MenuItemName="Delete"/>
+        <Item MenuEntryName="Edit" MenuItemName="Select all"/>
+        <Item MenuEntryName="Edit" MenuItemName="Begin/End Select"/>
