добавил две строки

--- a/проба.html
+++ b/проба.html
@@ -1,4 +1,6 @@
-﻿строка 1
+﻿Высоковольтная батарея снять/установить, заменить
+
+строка 1
 Проверка
 
 новое новое новое
@@ -12,4 +14,10 @@ yyра
         <Item MenuEntryName="Edit" MenuItemName="Paste"/>
         <Item MenuEntryName="Edit" MenuItemName="Delete"/>
         <Item MenuEntryName="Edit" MenuItemName="Select all"/>
+        <Item MenuEntryName="Edit" MenuItemName="Begin/End Select"/>
+
 новое совсем совсем
+
+9999
+
+Клуб пользователей «Mail.Ru для бизнеса»
